fix layout bugs

--- a/pravaler-project/src/components/input/input.css
+++ b/pravaler-project/src/components/input/input.css
@@ -8,3 +8,11 @@
 }
 
 
+input{
+    width: 95%;
+    display: flex;
+    font-family: 'Lato', sans-serif;
+    margin: 2% 0% 2% 0%;
+    padding: 2%;
+    background-color: #8080803d;
+}
